Key: wrong initilization of Lists fixed, messes up a few bits, not fixed yet